<resources>
    <string name="app_name">GalleryXApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="camera_pro">Pro</string>
    <string name="camera_video">Video</string>
    <string name="camera_photos">Photos</string>
    <string name="camera_Portrait">Portrait</string>
    <string name="camera_Night">Night</string>
    <string name="camera_AI">AI</string>
    <string name="camera_settings">Settings</string>
    <string name="camera_MovieFrame">Movie Frame</string>
    <string name="camera_Gridlines">Gridlines</string>
    <string name="camera_Macro">Macro</string>
    <string name="camera_Tilt_shift">Tilt-Shift</string>
    <string name="camera_Pro_color">Pro Color</string>
    <string name="camera_time_burst">Time Burst</string>
    <string name="camera_high_quality">Camera Quality</string>
    <string name="camera_Qr_Code_Scanner">QR Code</string>
    <string name="camera_QR_Code_Content">QR Code Content</string>
    <string name="camera_text_translator_text_header">Extracted Text</string>
    <string name="camera_image_info">Details info</string>
    <string name="image_taken_time_tag">Taken on :</string>
    <string name="image_taken_time">Image Taken</string>
    <string name="file_info">File info :</string>
    <string name="file_info_content">Image Name</string>
    <string name="file_local_path_tag">Local Path :</string>
    <string name="file_path">File Path </string>
    <string name="image_res_and_size">Image Size And Image Resolution</string>
    <string name="image_res_and_size_tag">Image Info :</string>
    <string name="image_editor_cancel_button">Cancel</string>
    <string name="image_editor_save_button">Save</string>
    <string name="image_editor_auto_mode">Auto</string>
    <string name="image_editor_crop_mode">Crop</string>
    <string name="image_editor_filter_mode">Filter</string>
    <string name="image_editor_adjust_mode">Adjust</string>
    <string name="image_filter_Filter_tag">Filter</string>
    <string name="image_filter_popular_Tag">Popular</string>
    <string name="allVideoText">Total Videos : </string>
    <string name="video_title">Video_Title</string>
    <string name="video_size">Size : </string>
    <string name="video_duration">duration</string>
    <string name="videos_Tag">Videos</string>

    <string name="lock">Lock_Icon</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>

    <string name="audio_track_button">Audio Track</string>
    <string name="subtitle_text">Subtitle</string>
    <string name="audio_booster_text">Audio Booster</string>
    <string name="video_speed_text">Speed</string>
    <string name="sleep_timer_text">Sleep Timer </string>
    <string name="picture_in_picture_mode">Pip Mode</string>
    <string name="folder_name">Folder Name</string>

    <string name="all_images">All Images</string>
    <string name="all_screenshots">Screenshots</string>
    <string name="cropped_Images">Cropped Images</string>
    <string name="gallery_X_images">GalleryX Images</string>
    <string name="local_storage_images">Local Images</string>
    <string name="camera_images">Camera Images</string>

</resources>