<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <com.google.android.material.button.MaterialButton
          android:id="@+id/audio_track_button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:icon="@drawable/audiotrack_icon"
          android:text="@string/audio_track_button"
          app:iconGravity="top"
          android:layout_weight="1"
          android:textAllCaps="false"
          android:textColor="@color/white"
          app:iconTint="@color/white"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:background="?attr/selectableItemBackground"
          android:clickable="true"
          android:focusable="true"
          />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/subtitle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:icon="@drawable/subtitles_icon"
          android:text="@string/subtitle_text"
          app:iconGravity="top"
          android:layout_weight="1"
          android:textAllCaps="false"
          android:textColor="@color/white"
          app:iconTint="@color/white"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:background="?attr/selectableItemBackground"
          android:clickable="true"
          android:focusable="true"
          />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/audio_booster_button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:icon="@drawable/audio_booster_icon"
          android:text="@string/audio_booster_text"
          app:iconGravity="top"
          android:layout_weight="1"
          android:textAllCaps="false"
          android:textColor="@color/white"
          app:iconTint="@color/white"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:background="?attr/selectableItemBackground"
          android:clickable="true"
          android:focusable="true"
          />


  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/video_speed_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/video_speed_track_icon"
            android:text="@string/video_speed_text"
            app:iconGravity="top"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sleep_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/sleep_timer_icon"
            android:text="@string/sleep_timer_text"
            app:iconGravity="top"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/picture_in_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/picture_in_picture_mode_iicom"
            android:text="@string/picture_in_picture_mode"
            app:iconGravity="top"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            />


    </LinearLayout>

</LinearLayout>