<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/video_thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@color/grey"
            app:shapeAppearanceOverlay="@style/curved"
            app:strokeWidth="2dp"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/dark_grey">
        </com.google.android.material.imageview.ShapeableImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">


        <TextView
            android:id="@+id/vide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_title"
            android:textStyle="bold"
            android:maxLines="2"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:layout_weight="1"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            />


            </LinearLayout>
            <TextView
                android:id="@+id/folder_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/folder_name"
                android:layout_marginTop="5dp"
                android:textColor="@color/dark_grey"
                android:textStyle="italic"

                android:layout_marginStart="10dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/video_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_size"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/video_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/video_duration"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>