<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_margin="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="start"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/tilt_shift"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:icon="@drawable/settings_icon"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                android:layout_marginHorizontal="25dp"
                android:backgroundTint="@color/dark_grey"
                android:layout_margin="5dp"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_settings"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_margin="5dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/pro_color"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:icon="@drawable/movie_frame_icon"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                android:layout_marginHorizontal="25dp"
                android:backgroundTint="@color/dark_grey"
                android:layout_margin="5dp"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_MovieFrame"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_margin="5dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/time_burst"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:icon="@drawable/grid_lines_icon"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                android:layout_marginHorizontal="25dp"
                android:backgroundTint="@color/dark_grey"
                android:layout_margin="5dp"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_Gridlines"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_margin="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/highQuality"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:icon="@drawable/high_quality_icon"
                app:iconSize="30dp"
                app:iconTint="@color/white"
                android:layout_marginHorizontal="25dp"
                android:backgroundTint="@color/dark_grey"
                android:layout_margin="5dp"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_high_quality"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_margin="5dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
